<resources>
    <string name="app_name">TMDB M7019E</string>
    <string name="action_load_popular_movies">Popular Movies</string>
    <string name="action_load_top_rated_movies">Top Rated Movies</string>
    <string name="action_load_saved_movies">Saved Movies</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="back_to_movie_list">Movie List</string>
    <string name="back_to_movie_details">Movie Details</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="movies_are_being_loaded">Movies are being Loaded</string>
    <string name="reviews_are_being_loaded">Reviews are being Loaded</string>
    <string name="videos_are_being_loaded">Videos are being Loaded</string>
    <string name="movie_reviews">Reviews</string>
    <string name="movie_backdrop">Movie backdrop</string>
    <string name="reviews_fragment">Navigate to the reviews page</string>
    <string name="movie_genres">Genres</string>
    <string name="movie_imdb_title">IMDb Link:</string>
    <string name="movie_page_title">Page Link:</string>
    <string name="third_fragment_label">Reviews</string>
    <string name="author_avatar">Author avatar</string>
    <string name="poster_description">Movie poster</string>
    <string name="save_locally">Save Locally</string>
    <string name="remove_locally">Remove Locally</string>
    <string name="imdb_base_url">https://www.imdb.com/title/</string>

</resources>