<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="movie"
            type="com.ltu.m7019e.v23.themoviedb.model.Movie" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MovieDetailFragment">

        <ImageView
            android:id="@+id/movie_detail_backdrop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/movie_backdrop"
            app:backdropImageUrl="@{movie.backdropPath}" />

        <TextView
            android:id="@+id/movie_detail_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@{movie.title}"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_detail_backdrop" />

        <Button
            android:id="@+id/back_to_movie_list"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginBottom="16dp"
            android:text="@string/previous"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/to_third_fragment"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="16dp"
            android:text="@string/movie_reviews"
            android:contentDescription="@string/reviews_fragment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/movie_details_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"

            android:contentDescription="@string/movie_genres"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_detail_title"
            android:text="@{movie.genres}" />

        <TextView
            android:id="@+id/movie_details_imdb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/movie_imdb_title"
            app:layout_constraintEnd_toEndOf="@+id/divider_movie_link_imdb_link"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/divider_movie_link_imdb_link"
            app:layout_constraintTop_toBottomOf="@+id/divider_movie_link_imdb_link"
            android:text='@{"https://www.imdb.com/title/" + movie.imdbId}' />

        <TextView
            android:id="@+id/movie_details_page"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/movie_page_title"
            app:layout_constraintEnd_toEndOf="@+id/divider_movie_link"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/divider_movie_link"
            app:layout_constraintTop_toBottomOf="@+id/divider_movie_link"
            android:text="@{movie.homepage}" />

        <ImageView
            android:id="@+id/status_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/movies_are_being_loaded"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/movie_page_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_page_title"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/divider_movie_link"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/divider_movie_link" />

        <TextView
            android:id="@+id/movie_page_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_imdb_title"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/divider_movie_link_imdb_link"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/divider_movie_link_imdb_link" />

        <View
            android:id="@+id/divider_movie_link"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="228dp"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_details_genre" />

        <View
            android:id="@+id/divider_movie_link_imdb_link"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="100dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="@+id/divider_movie_link"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/divider_movie_link"
            app:layout_constraintTop_toBottomOf="@+id/divider_movie_link" />

        <TextView
            android:id="@+id/movie_details_description"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="@{movie.overview}"
            app:layout_constraintBottom_toTopOf="@+id/movie_page_title"
            app:layout_constraintEnd_toEndOf="@+id/movie_details_genre"
            app:layout_constraintStart_toStartOf="@+id/movie_details_genre"
            app:layout_constraintTop_toBottomOf="@+id/movie_details_genre" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>