<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ReviewsFragment" >

        <Button
            android:id="@+id/back_to_movie_details"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            android:text="@string/back_to_movie_details"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/review_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toTopOf="@+id/back_to_movie_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/video_list" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/video_list"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/status_image_videos"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/videos_are_being_loaded"
            app:layout_constraintBottom_toBottomOf="@+id/review_list"
            app:layout_constraintEnd_toEndOf="@+id/review_list"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/review_list"
            app:layout_constraintTop_toTopOf="@+id/review_list"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/status_image_reviews"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/reviews_are_being_loaded"
            app:layout_constraintBottom_toBottomOf="@+id/video_list"
            app:layout_constraintEnd_toEndOf="@+id/video_list"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/video_list"
            app:layout_constraintTop_toTopOf="@+id/video_list"
            tools:srcCompat="@tools:sample/avatars" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>